# EntreSupport

./: README.md  index.html  tailwind.config.ts  tatus -u
.git copy/: FETCH_HEAD  config  index  packed-refs
.git copy/objects/pack/: pack-12bf94bde8607c1d041c5db5bb7ef0478d5401f8.idx  pack-12bf94bde8607c1d041c5db5bb7ef0478d5401f8.pack
.git copy/refs/heads/: main
ai_agents/: competitor_analyzer.py  example.py  financial_analyzer.py  market_analyzer.py  orchestrator.py  requirements.txt  risk_assessor.py
aiagent/: README.md  pyproject.toml
aiagent/src/aiagent/: crew.py  main.py
aiagent/src/aiagent/static/css/: style.css
aiagent/src/aiagent/templates/: index.html
backend/: .env  Agents.py  app.py  requirements.txt
src/: App.tsx  index.css
src/assets/: types.ts
src/components/: AIInnovationSection.tsx  AnimatedLayout.tsx  ChatTreeNode.tsx  FeatureCard.tsx  Hero.tsx  KnowledgeBase.tsx  MentorshipSection.tsx  Navbar.tsx  NetworkingHub.tsx  PageTransition.tsx  ProfileCard.tsx  StartupAnalysis.tsx  index.ts
src/hooks/: useScrollTo.ts
src/lib/: analysis-service.ts  animations.ts
src/pages/: Index.tsx
src/types/: analysis.ts
